--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -16,17 +16,27 @@
 				<img src="https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/other/wordpress-rotating-ball-o.svg">
 				<img src="https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/other/disqus-preloader.svg">
 			</div>
-			<p style="color: #666666;">&copy; 2018 -
+			<!-- color: #666666; -->
+			<p style="color: #b9b9b9;">&copy; 2018 -
 				<%= date(new Date(), 'YYYY') %>
 				<%= config.author || config.title %>
 			</p>
 		</div>
+		
+		<!-- 访客统计 -->		
+		<div id="busuanzi_container"></div>
+		
 		<!-- 已运行的时间-容器 -->
 		<div id="days"></div>
 		<div class="footer-device">
 			<p style="font-family: 'Ubuntu', sans-serif;">
 				<!--<span style="color: #b9b9b9;">Theme <a href="https://github.com/honjun/hexo-theme-sakura" target="_blank" style="color: #b9b9b9;;text-decoration: underline dotted rgba(0, 0, 0, .1);">Sakura</a> <i class="iconfont icon-sakura rotating" style="color: #ffc0cb;display:inline-block"></i> by <a href="https://2heng.xin/" target="_blank" style="color: #b9b9b9;;text-decoration: underline dotted rgba(0, 0, 0, .1);">Mashiro</a>&<a href="https://www.hojun.cn/" target="_blank" style="color: #b9b9b9;;text-decoration: underline dotted rgba(0, 0, 0, .1);">Hojun</a>, Powered by Hexo, Hosted by Coding Pages</a>-->
-				<span style="color: #b9b9b9;">Theme <a href="https://github.com/xiongtianci-tc/hexo-theme-sakura" target="_blank" style="color: #b9b9b9;;text-decoration: underline dotted rgba(0, 0, 0, .1);">脚印</a> <i class="iconfont icon-sakura rotating" style="color: #ffc0cb;display:inline-block"></i> , Powered by Hexo, Hosted by Coding Pages</a>
+				<span style="color: #b9b9b9;">
+					Theme 
+					<a href="https://github.com/xiongtianci-tc/hexo-theme-sakura" target="_blank" style="color: #b9b9b9;;text-decoration: underline dotted rgba(0, 0, 0, .1);">Sakura</a>
+					<i class="iconfont icon-sakura rotating" style="color: #ffc0cb;display:inline-block"></i>
+					, Powered by <a href="https://hexo.io/zh-cn/" target="_blank" style="color: #b9b9b9;;text-decoration: underline dotted rgba(0, 0, 0, .1);">Hexo</a>
+					, Hosted by <a href="https://coding.net/pages" target="_blank" style="color: #b9b9b9;;text-decoration: underline dotted rgba(0, 0, 0, .1);">Coding Pages</a>
 				</span>
 			</p>
 		</div>
@@ -67,7 +77,7 @@
 			"pjax": "<%- theme.pjax %>",
 			"movies": {
 				"url": "<%- theme.movies.url %>",
-				"name": "<%- theme.movies.name%>",
+				"name": "<%- theme.movies.name %>",
 				"live": "open"
 			},
 			"windowheight": "auto",
@@ -152,4 +162,12 @@
 		return i;
 	}
 	show_date_time();
+</script>
+<!-- 访客统计-js -->
+<script>
+	if(<%- theme.footer.counter %>){
+		document.getElementById('busuanzi_container').innerHTML="<span id=\"busuanzi_container_site_pv\">本站总访问量 <span id=\"busuanzi_value_site_pv\"></span> 次</span><span class=\"post-meta-divider\"> | </span><span id=\"busuanzi_container_site_uv\">本站访客数 <span id=\"busuanzi_value_site_uv\"></span> 人</span>";
+	}else{
+		document.getElementById('busuanzi_container').hidden;
+	}
 </script>
