--- a/layout/donate.ejs
+++ b/layout/donate.ejs
@@ -43,11 +43,11 @@
   </article>
   <section class="author-profile">
     <div class="info" itemprop="author" itemscope="" itemtype="http://schema.org/Person">
-      <a href="/about/" class="profile gravatar"><img src="<%- (theme.cdn || '') + theme.avatar%>" itemprop="image" alt="hojun" height="70" width="70"></a>
+      <a href="/about/" class="profile gravatar"><img src="<%- (theme.cdn || '') + theme.avatar%>" itemprop="image" alt="天赐" height="70" width="70"></a>
       <div class="meta">
         <span class="title">Author</span>
         <h3 itemprop="name">
-        <a href="<%- theme.url%>" itemprop="url" rel="author">hojun</a>
+        <a href="<%- theme.url%>" itemprop="url" rel="author">天赐</a>
         </h3>
       </div>
     </div>
